--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="header">
+        <div class="heading">Header Logo</div>
+        <a href="#">header link one</a>
+        <a href="#">header link two</a>
+        <a href="#">header link three</a>
+    </div>
 </body>
 </html>
