--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="header">
         <div class="heading">Header Logo</div>
+        <div class="links">
         <a href="#">header link one</a>
         <a href="#">header link two</a>
         <a href="#">header link three</a>
+    </div>
     </div>
 </body>
 </html>
