--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
-        <div class="heading">Header Logo</div>
-        <div class="links">
-        <a href="#">header link one</a>
-        <a href="#">header link two</a>
-        <a href="#">header link three</a>
-    </div>
-    </div>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Header One</a></li>
+                <li> <a href="#">Header Two</a></li>
+                <li> <a href="#">Header Three</a></li>
+                <li> <a href="#">Header Four</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
