--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">Header One</a></li>
-                <li> <a href="#">Header Two</a></li>
-                <li> <a href="#">Header Three</a></li>
-                <li> <a href="#">Header Four</a></li>
+                <div class="leftheader">
+                <li><a href="#">Header Logo</a></li>
+                </div>
+                <div class="rightheader">
+                <li> <a href="#">header link one</a></li>
+                <li> <a href="#">header link two</a></li>
+                <li> <a href="#">header link three</a></li>
+                </div>
             </ul>
         </nav>
     </header>
