added image section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,22 @@
                 </div>
             </ul>
         </nav>
+        <div class="container">
+        <div class="leftcontainer">
+            <h1>
+                This Website Is<br>Awesome
+            </h1>
+            <p>
+                this is some subtext containing inside<br>
+                there are multiline comments containing<br>
+                There are several good paragraphs here.
+            </p>
+        </div>
+        <div class="rightcontainer">
+            <img src="images/fcb.jpg" alt="barcelona logo">
+        </div>
+    </div>
     </header>
+        
 </body>
 </html>
