added signup button

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 there are multiline comments containing<br>
                 There are several good paragraphs here.
             </p>
+            <button>Sign up</button>
         </div>
         <div class="rightcontainer">
             <img src="images/fcb.jpg" alt="barcelona logo">
