added bottom header

--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
         </div>
     </div>
     </header>
+    <div class="bottom-container">
+        <div class="secondheader">
+            <p>Some random information.</p>
+        </div>
+        <div class="bottomimages">
+
+        </div>
+    </div>
         
 </body>
 </html>
