added bottom image section

--- a/index.html
+++ b/index.html
@@ -38,14 +38,19 @@
         </div>
     </div>
     </header>
-    <div class="bottom-container">
         <div class="secondheader">
-            <p>Some random information.</p>
+            <p>Legends of the club.</p>
         </div>
         <div class="bottomimages">
-
+            <div class="imagecontainer"><img src="images/messi.webp"><p>La pulga barcelona no 10<br>
+            Top scorer of Barca</p></div>
+            <div class="imagecontainer"> <img src="images/iniesta.jpg"><p>Don Andres Iniesta<br>
+            One of the greatest midfielders</p></div>
+            <div class="imagecontainer"><img src="images/messi.webp"><p>La pulga barcelona no 10<br>
+                Top scorer of Barca</p></div>
+            <div class="imagecontainer"><img src="images/iniesta.jpg"><p>Don Andres Iniesta<br>
+                One of the greatest midfielders</p></div>
         </div>
-    </div>
         
 </body>
 </html>
