modified specifics about html

--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
         <nav>
             <ul>
                 <div class="leftheader">
-                <li><a href="#">Header Logo</a></li>
+                <li><a href="#">Football Club Barcelona</a></li>
                 </div>
                 <div class="rightheader">
-                <li> <a href="#">header link one</a></li>
-                <li> <a href="#">header link two</a></li>
-                <li> <a href="#">header link three</a></li>
+                <li> <a href="#">Squad</a></li>
+                <li> <a href="#">Upcoming Matches</a></li>
+                <li> <a href="#">Trophies</a></li>
                 </div>
             </ul>
         </nav>
         <div class="container">
         <div class="leftcontainer">
             <h1>
-                This Website Is<br>Awesome
+                Visca el Barca<br>Mes que un club
             </h1>
             <p>
-                this is some subtext containing inside<br>
-                there are multiline comments containing<br>
-                There are several good paragraphs here.
+                Fc barcelona was established in year 1899.<br>
+                It is one of the most popular club in world football.<br>
+                Major titiles include 5 times ucl champions.
             </p>
             <button>Sign up</button>
         </div>
