--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
             Top scorer of Barca</p></div>
             <div class="imagecontainer"> <img src="images/iniesta.jpg"><p>Don Andres Iniesta<br>
             One of the greatest midfielders</p></div>
-            <div class="imagecontainer"><img src="images/messi.webp"><p>La pulga barcelona no 10<br>
-                Top scorer of Barca</p></div>
-            <div class="imagecontainer"><img src="images/iniesta.jpg"><p>Don Andres Iniesta<br>
-                One of the greatest midfielders</p></div>
+            <div class="imagecontainer"><img src="images/xavi.jpg"><p>Xavi hernandez<br>
+            One of the greatest barca captain</p></div>
+            <div class="imagecontainer"><img src="images/neymar.jpg"><p>Neymar jr<br>
+            Won a treble with barca</p></div>
         </div>
         
 </body>
