--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             One of the greatest midfielders</p></div>
             <div class="imagecontainer"><img src="images/xavi.jpg"><p>Xavi hernandez<br>
             One of the greatest barca captain</p></div>
-            <div class="imagecontainer"><img src="images/neymar.jpg"><p>Neymar jr<br>
+            <div class="imagecontainer"><img src="images/neymar.jpeg"><p>Neymar jr<br>
             Won a treble with barca</p></div>
         </div>
         
