added quote section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Barcelona</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -51,6 +51,8 @@
             <div class="imagecontainer"><img src="images/neymar.jpeg"><p>Neymar jr<br>
             Won a treble with barca</p></div>
         </div>
-        
+        <div class="quotecontainer">
+            <p>Everybody could use the money, but you don't play for it<br>you play with your heart - and that's a big difference you see in Barcelona. <br>Everybody wants to play there. everybody wants to enjoy themselves.<br> It's maybe a small percentage, but maybe it's the difference.</p>
+        </div>
 </body>
 </html>
