--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
         </div>
         <div class="quotecontainer">
             <p>Everybody could use the money, but you don't play for it<br>you play with your heart - and that's a big difference you see in Barcelona. <br>Everybody wants to play there. everybody wants to enjoy themselves.<br> It's maybe a small percentage, but maybe it's the difference.</p>
+            <p>-Johan Cryuff,Barca Legend</p>
         </div>
+        
 </body>
 </html>
