--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@
             <p>Everybody could use the money, but you don't play for it<br>you play with your heart - and that's a big difference you see in Barcelona. <br>Everybody wants to play there. everybody wants to enjoy themselves.<br> It's maybe a small percentage, but maybe it's the difference.</p>
             <p>-Johan Cryuff,Barca Legend</p>
         </div>
-        
+        <div class="actionbutton">
+            <div class="bluesection">
+                <p>Call to Action! its time!<br>
+                signup to our product by clicking this button over there.</p>
+                <button class="bluebutton">Sign up</button>
+            </div>
+        </div>
+        <footer>
+            <p>Reach us at info@fcbarcelona.com</p>
+        </footer>
 </body>
 </html>
